# ChangeLog for www-client/opera
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.439 2010/01/28 21:52:44 jer Exp $

  28 Jan 2010; Jeroen Roovers <jer@gentoo.org> opera-10.10-r1.ebuild,
  opera-10.20_pre4744.ebuild:
  Better to just remove the call to md5check altogether.

*opera-10.10-r1 (28 Jan 2010)

  28 Jan 2010; Jeroen Roovers <jer@gentoo.org> +opera-10.10-r1.ebuild:
  Apply the same enhancement to 10.10.

  28 Jan 2010; Jeroen Roovers <jer@gentoo.org> opera-10.20_pre4744.ebuild:
  Do not run the md5check in install.sh since we already check the entire
  tarball ourselves. Do not advise not to worry about it either.

  05 Jan 2010; Jeroen Roovers <jer@gentoo.org> opera-10.50_pre6177.ebuild:
  LINGUAS=en should not be optional (bug #299444).

  03 Jan 2010; Jeroen Roovers <jer@gentoo.org> opera-10.50_pre6177.ebuild:
  Fix category: media-plugins.

  03 Jan 2010; Jeroen Roovers <jer@gentoo.org> opera-10.50_pre6177.ebuild:
  Depend simply on gst-plugins-meta.

  03 Jan 2010; Jeroen Roovers <jer@gentoo.org> opera-10.50_pre6177.ebuild:
  Sort dependencies. Add gst-plugins-{ogg,theora,vorbis} instead of
  gst-plugins-base (bug #299444 comment #3).

  03 Jan 2010; Jeroen Roovers <jer@gentoo.org> opera-10.50_pre6177.ebuild:
  Patch the wrapper instead of relying on the user environment being up to
  date (bug #299444).

*opera-10.50_pre6177 (02 Jan 2010)

  02 Jan 2010; Jeroen Roovers <jer@gentoo.org> opera-10.10.ebuild,
  opera-10.20_pre4744.ebuild, +opera-10.50_pre6177.ebuild:
  License change. Version bump
  <http://my.opera.com/desktopteam/blog/happy-new-year>.

  15 Dec 2009; Jeroen Roovers <jer@gentoo.org> opera-10.20_pre4744.ebuild:
  Do not use escape sequences in elog messages (bug #296916).

  09 Dec 2009; Jeroen Roovers <jer@gentoo.org> -opera-10.01.ebuild:
  Remove old.

  09 Dec 2009; Jeroen Roovers <jer@gentoo.org> opera-10.10.ebuild:
  Stable for PPC (bug #294208).
