@@ -1,6 +1,11 @@
 # ChangeLog for www-client/opera
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.439 2010/01/28 21:52:44 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.440 2010/01/30 15:05:32 jer Exp $
+
+*opera-10.50_pre6201 (30 Jan 2010)
+
+  30 Jan 2010; Jeroen Roovers <jer@gentoo.org> +opera-10.50_pre6201.ebuild:
+  Version bump <http://my.opera.com/desktopteam/blog/accelerated-process>.
 
   28 Jan 2010; Jeroen Roovers <jer@gentoo.org> opera-10.10-r1.ebuild,
   opera-10.20_pre4744.ebuild:
